<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/header_name1"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/header_name2"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="normal"
        android:textAllCaps="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:layout_gravity="top"
        android:gravity="center"
        android:weightSum="3">

        <LinearLayout
            android:id="@+id/way1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="top"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/phone"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/text_way1_desc"
                android:src="@drawable/ic_phone_android_black_24dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/no_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/text_way1_desc"
                android:text="@string/text_way1"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="bold"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/way2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="top"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:scaleType="centerCrop"
                android:id="@+id/event_note"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/text_way1_desc"
                android:src="@drawable/edit"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/plan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/text_way2_desc"
                android:text="@string/text_way2"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="bold"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/way3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="top"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/list"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/text_way1_desc"
                android:src="@drawable/ic_list_black_24dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/prioritise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/text_way3_desc"
                android:text="@string/text_way3"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="bold"
                android:gravity="center"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:baselineAligned="false"
        android:gravity="center"
        android:layout_gravity="top"
        android:weightSum="3">

        <LinearLayout
            android:id="@+id/way4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="top"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/sun"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/text_way4_desc"
                android:src="@drawable/sun"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/wake_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/text_way4_desc"
                android:text="@string/text_way4"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="bold"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/way5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="top"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/sitting"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/text_way5_desc"
                android:src="@drawable/ic_airline_seat_recline_extra_black_24dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/hardest_task_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/text_way5_desc"
                android:text="@string/text_way5"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="bold"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/way6"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="top"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/clock"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/text_way6_desc"
                android:src="@drawable/ic_access_time_black_24dp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:id="@+id/study_40mns"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/text_way6_desc"
                android:text="@string/text_way6"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="bold"
                android:gravity="center" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:baselineAligned="false"
        android:gravity="center"
        android:layout_gravity="top"
        android:weightSum="2" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:gravity="center"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/bathtub"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/text_way7" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_way7"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:gravity="center"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/emblem"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/text_way8" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_way8"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_whatshot_black_24dp"
        android:contentDescription="@string/the_end"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

</LinearLayout>